# MVCDemo

./: CMakeLists.txt  MVCDemo.pro  README.md  README.txt  README.txt.original
images/: images.qrc
src/: AlphaFS.glsl  AlphaVS.glsl  CloningParameters.h  CoordinatesMesh.h  MVCCloner.cpp  MVCCloner.h  MVCDemo.pro  Sampling2DFilterVS.glsl  SamplingFS.glsl  SamplingVS.glsl  glshaders.cpp  glshaders.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mvcdemo.cpp  mvcdemo.h  mvcshaders.cpp  mvcshaders.h  shaders.qrc  sourcewidget.cpp  sourcewidget.h  utils.cpp  utils.h
src/MVCDemo/: MVCDemo.pro  mainwindow.cpp
